--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
+    <string name="pref_title_location">Location</string>
+    <string name="pref_default_location">Maribor</string>
+    <string name="pref_key_location">Location</string>
 
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
@@ -17,8 +20,6 @@
         based on your message history
     </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
 
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
