--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,11 @@
     <string name="title_activity_settings">Settings</string>
 
 
-    <!-- Strings related to Settings -->
     <string name="action_refresh">Refresh</string>
+    <string name="action_map">Map location</string>
+    <string name="action_share">Share</string>
+
+    <!-- Strings related to Settings -->
 
     <!-- Location settings -->
     <string name="pref_location_title">Location</string>
@@ -19,9 +22,7 @@
     <string name="pref_unit_key">units</string>
     <string name="pref_unit_label_metric">Metric</string>
     <string name="pref_unit_label_imperial">Imperial</string>
-    <string-array name="pref_unit_values">
-        <item>Metric</item>
-        <item>Imperial</item>
-    </string-array>
+    <string name="pref_unit_metric" translatable="false">metric</string>
+    <string name="pref_unit_imperial" translatable="false">imperial</string>
 
 </resources>
